--- a/public/assets/css/nice-select.css
+++ b/public/assets/css/nice-select.css
@@ -177,7 +177,7 @@
   .nice-select .option:hover,
   .nice-select .option.focus {
     color: #fff;
-    background-color: #02a95c;
+    background-color: #3271A6;
   }
   
   .nice-select .option.disabled {
