--- a/public/assets/sass/base/_reset.scss
+++ b/public/assets/sass/base/_reset.scss
@@ -9,10 +9,10 @@ input {
 
 .dashboard-layout {
   input:focus-visible {
-    outline: 1.8px solid #02a95c !important;
+    outline: 1.8px solid #3271A6 !important;
   }
   select:focus-visible {
-    outline: 1.8px solid #02a95c !important;
+    outline: 1.8px solid #3271A6 !important;
   }
 }
 
