--- a/public/assets/sass/base/_variables.scss
+++ b/public/assets/sass/base/_variables.scss
@@ -5,8 +5,8 @@
 $template-font: "Jost", sans-serif;
 
 // Template Color Name
-$primary-color-1000: #028347;
-$primary-color-900: #02a95c;
+$primary-color-1000: #2d485e;
+$primary-color-900: #3271A6;
 $primary-color-800: #35ba7d;
 $primary-color-700: #67cb9d;
 $primary-color-600: #9addbe;
@@ -36,7 +36,7 @@ $yellow-color: #ffa11a;
 $purple-color: #9747ff;
 
 $about-fea-color1: #ffa11a1a;
-$about-fea-color2: #02a95c1a;
+$about-fea-color2: #3271A61a;
 $about-fea-color3: #ff4e591a;
 $about-fea-color4: #9747ff1a;
 
